@@ -1,3 +1,8 @@
+Fri Sep 15 18:47:06 2000  George Lebl <jirka@5z.com>
+
+	* gnome-ditem.[ch]: Launch Type=URL entries, and slight
+	  cosmetic updates
+
 Thu Sep 14 18:45:00 2000  George Lebl <jirka@5z.com>
 
 	* gnome-ditem.c: use g_path_get_dirname instead of g_dirname
